# glam

./: .gitignore  README.md  justfile
.github/workflows/: ci.yml  deploy-to-pages.yml
lib/: pyproject.toml
lib/src/glam/: __init__.py  _lib.py
lib/stubs/pyteomics/: mass.pyi  parser.pyi
lib/tests/: _lib_test.py  glam_test.py
lib/tests/_regtest_outputs/: glam_test.test_all_peptides.out  glam_test.test_basic.out
lib/tests/data/: chlamy_glycans.csv  chlamy_glycans_and_masses.csv  csv.csv  glycopeptide_candidates.txt  tryptic_peptides.txt
web/: bun.lockb  eslint.config.js  package.json  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: glam.ts  state.svelte.ts  theglam-1.0.0-py3-none-any.whl
web/src/routes/: +layout.svelte  +page.svelte  AdvancedOptions.svelte  Attach Glycans.svelte  Build Database.svelte  CitationModal.svelte  ConfigureDigests.svelte  ConfigureGlycosylation.svelte  ConfigureModifications.svelte  DigestSettings.svelte  FileDropzone.svelte  Generate Peptides.svelte  Glam.svelte  OptionalCount.svelte  Stepper.svelte  UploadGlycans.svelte  UploadProtein.svelte
web/src/routes/Attach Glycans/: ConfigureGlycosylation.svelte  UploadGlycans.svelte
web/src/routes/ConfigureDigests/: BuiltInDigestions.svelte  MissedCleavages.svelte  PeptideLength.svelte  SemiSpecific.svelte
web/src/routes/ConfigureGlycosylation/: AllPeptides.svelte  BuiltInMotifs.svelte
web/src/routes/ConfigureModifications/: BuiltInModifications.svelte  CustomModifications.svelte  (+1 more)
web/static/: theglam-1.2.0-py3-none-any.whl
web/web/: bun.lockb  package.json
(+13 files in other folders)
